public LIVE privacy protocol - sol 6 -session1
